add stock controller and quality controller.

--- a/RollBook/Web.config
+++ b/RollBook/Web.config
@@ -53,7 +53,7 @@
 		</compilers>
 	</system.codedom>
 	<connectionStrings>
-		<add name="Student_InformationConnectionstring" connectionString="data source=DESKTOP-5MESAUC\SQLEXPRESS;initial catalog=RollBook;Integrated Security=True;" providerName="System.Data.SqlClient" />
+		<add name="DefaultConnection" connectionString="data source=DESKTOP-5MESAUC\SQLEXPRESS;initial catalog=RollBook;Integrated Security=True;" providerName="System.Data.SqlClient" />
 		<!--<add name="DefaultConnection" connectionString="data source=LAPTOP-1A1L3REP\SQL_SERVER;Initial Catalog=RollBook;;User ID=sa;Password=pass@1234;" providerName="System.Data.SqlClient" />-->
 	</connectionStrings>
 </configuration>
