--- a/RollBook/RollBook.csproj
+++ b/RollBook/RollBook.csproj
@@ -136,12 +136,17 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\QualityController.cs" />
     <Compile Include="Controllers\RollController.cs" />
+    <Compile Include="Controllers\StockController.cs" />
+    <Compile Include="DAL\Quality_DAL.cs" />
     <Compile Include="DAL\Roll_DAL.cs" />
+    <Compile Include="DAL\Stock_DAL.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\RollMaster.cs" />
+    <Compile Include="Models\StockMaster.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -184,9 +189,12 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Roll\Index.cshtml" />
+    <Content Include="Views\Stock\Index.cshtml" />
+    <Content Include="Views\Quality\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Stock_DAL\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
